[gd_scene load_steps=8 format=3 uid="uid://7sb0c0q5o21d"]

[ext_resource type="Script" uid="uid://bu747etef6gsq" path="res://scripts/character_select.gd" id="1_char_select"]
[ext_resource type="Texture2D" uid="uid://cbv0cucplb2i7" path="res://gfx/title/start_screen.png" id="2_bg"]
[ext_resource type="FontFile" uid="uid://r0maixtbrsdt" path="res://fonts/Sniglet Regular.ttf" id="3_font"]
[ext_resource type="Theme" uid="uid://cg1k1l2re7soi" path="res://themes/default_theme.tres" id="4_theme"]
[ext_resource type="Texture2D" uid="uid://cosl0eleadgko" path="res://assets/characters/overworld/ow1.png" id="5_char1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_preview"]
bg_color = Color(0.1, 0.1, 0.1, 0.8)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.047, 0.549, 0.388, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="AtlasTexture" id="AtlasTexture_preview"]
atlas = ExtResource("5_char1")
region = Rect2(0, 0, 32, 32)

[node name="CharacterSelect" type="Control"]
layout_mode = 3
anchor_right = 1.0
anchor_bottom = 1.093
offset_bottom = -33.48
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_char_select")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_bg")
expand_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = -0.092
anchor_right = 1.0
anchor_bottom = 1.092
offset_top = 0.120003
offset_right = 1.0
offset_bottom = 52.88
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.047, 0.549, 0.388, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 28
text = "Choose Your Character"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Spacer1" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 30

[node name="CharacterList" type="ScrollContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/CharacterList"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="CharacterPreview" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_preview")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/CharacterPreview"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/CharacterPreview/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/CharacterPreview/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PreviewSprite" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/CharacterPreview/MarginContainer/VBoxContainer/CenterContainer"]
texture_filter = 1
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
texture = SubResource("AtlasTexture_preview")
expand_mode = 1
stretch_mode = 5

[node name="CharacterName" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/CharacterPreview/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 24
text = "Aiden"
horizontal_alignment = 1

[node name="CharacterBio" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/CharacterPreview/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 14
text = "A brave adventurer
seeking glory"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Spacer2" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme = ExtResource("4_theme")
text = "Back"

[node name="ConfirmButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme = ExtResource("4_theme")
text = "Confirm"
